--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://yaya.github.io/yaya-page",
+  "homepage": "https://saadelmasrour.github.io/last_testing",
   "name": "to-karima",
   "version": "0.1.0",
   "private": true,
